# geekbot-api-py

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  bandit.yml  noxfile.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yaml  constraints.txt  lint.yaml  release.yaml  release.yml  run_tests_with_tox.yaml  tests.yml
geekbot_api/: __init__.py  client.py  schemas.py
geekbot_api/clients/: __init__.py  reports.py  standups.py  teams.py
src/geekbot_api/: config.py  schemas.py
src/geekbot_api/clients/: __init__.py  reports.py
tests/: __init__.py  conftest.py  test_async_teams_client.py  test_client.py
tests/unit/: test_async_reports_client.py  test_async_standups_client.py  test_reports_client.py  test_standups_client.py  test_teams_client.py
