[tool.poetry]
name = "geekbot-api"
version = "0.0.0"
description = "Async Python client for the geekbot (https://geekbot.com) api"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrewthetechie/geekbot-api-py"
repository = "https://github.com/andrewthetechie/geekbot-api-py"
packages = [
    { include = "geekbot_api", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/geekbot-api-py/releases"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.5"
httpx = "^0.23.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-env = "^0.8.1"
pytest-mock = "^3.10.0"
pytest-httpx = "^0.21.3"
requests-mock = "^1.10.0"
pytest-xdist = "^3.2.0"
ruff = "^0.0.249"
mypy = "^1.0.0"
pre-commit = "^2.0.0"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
bandit = "^1.7.4"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n 4 --ignore examples --cov=geekbot_api --cov-report xml:.coverage.xml --cov-report=term-missing --cov-fail-under 82"

[tool.bandit]
exclude= "tests/ examples/*"

[tool.ruff]
line-length = 120
target-version = "py37"
