[wheel]
python-tag = py3

[metadata]
name = geekbot-api
url = https://github.com/andrewthetechie/geekbot-api-py
description = Async Python client for the geekbot (https://geekbot.com) api
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrew Herrington
author_email = andrew.the.techie@gmail.com
license = MIT
license_files = LICENSE
keywords = async, api, client
project_urls = 
	Documentation = https://github.com/andrewthetechie/pydantic-aioredis
	Source code = https://github.com/andrewthetechie/pydantic-aioredis
	Issue tracker = https://github.com/andrewthetechie/pydantic-aioredis
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = 
	geekbot_api
include_package_data = True
python_requires = >= 3.6
install_requires = 
	pydantic>=1.8.2
	httpx>=0.19.0
setup_requires = 
    setuptools-git-versioning >= 1.3.6


[options.extras_require]
tests = 
	pytest
    pytest-cov
    pytest-mock

[tool:pytest]
addopts = --cov=geekbot_api --cov-report=term-missing --cov-report=xml --cov-fail-under 99

[flake8]
max-line-length=119
exclude = docs/* test/*

[bandit]
exclude: tests/ examples/*

[pylint.MASTER]
extension-pkg-whitelist=pydantic,httpx
suggestion-mode=yes

[pylint.MESSAGES CONTROL]
disable=R0903, # Too few public methods, we've got dataclasses and schemas
		R0801  # Similar lines? We have similar imports in multiple files for typing
